--- a/index.html
+++ b/index.html
@@ -151,17 +151,7 @@
         </div>
         <div class="letter">
             <h1>Эрике</h1>
-            <p>Посвещаеться дорогому мне человеку.Не получилось в жизни
-                 валентинку подарить так что на)) Хочу сказать что ты первая 
-                 кого по настоящему я полюбил, в начале было приятно общаться и
-                  пиздеть обо всём но потом ты начала по немногу пропадать а патом 
-                  ваще начала встречаться с кем-то, в тот момент как-то грустна
-                   была и мы не общались месяца 4. Ну кароче к чему это я (я сам не знаю) 
-                   хочу сказать что ты одна из самых дорогоих мне людей в моей жизни, 
-                 если бы не ты то хз ваще что было бы. Ты очень красивая, добрая ну и со своими приколами))
-                особоенно лезби до сих пор не панимаю это дикий рофл или внатуре АХАХХАХАХАХА. Ну и хочу
-                поблагадорить тебя за всё И на последок хочу спросить тебя. эт взаимна? (ну просто я без ответа сижу уже долга)
-            ИХХИХИХИХИ ПАКА</p>
+            <p> с днём всех закоханих, открыточка через интернетик)). эта взаимна? 😰</p>
         </div>
     </div>
 
